--- a/package.json
+++ b/package.json
@@ -1,25 +1,7 @@
 {
-  "name": "binbin",
-  "version": "1.0.0",
-  "description": "use angular for gotoMVC",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fateself/gotoMVC.git"
-  },
-  "keywords": [
-    "binbin520"
-  ],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fateself/gotoMVC/issues"
-  },
-  "homepage": "https://github.com/fateself/gotoMVC#readme",
+  "private": true,
   "dependencies": {
-    "angular": "^1.6.4"
+    "angular": "^1.5.8",
+    "todomvc-app-css": "^2.0.0"
   }
 }
